--- a/examples/pubsub/README
+++ b/examples/pubsub/README
@@ -1,4 +1,4 @@
-C++ Client implementation for Cloud Pub/Sub service (TIPS)
+C++ Client implementation for Cloud Pub/Sub service
 (https://developers.google.com/apis-explorer/#p/pubsub/v1beta1/).
 
 "Google Cloud Pub/Sub" API needs to be enabled at
@@ -11,16 +11,20 @@ be created with scope "https://www.googleapis.com/auth/cloud-platform" as below:
 
 gcloud compute instances create instance-name 
     --image debian-7 --scopes https://www.googleapis.com/auth/cloud-platform
+
+Google TLS cert is required to run the client, which can be downloaded from
+Chrome browser.  
    
 To run the client from GCE:
-make tips_client
-bins/opt/tips_client --project_id="your project id"
+make pubsub_client
+GRPC_DEFAULT_SSL_ROOTS_FILE_PATH="Google TLS cert" bins/opt/pubsub_client
+     --project_id="your project id"
     
 A service account credential is required to run the client from other
 environments, which can be generated as a JSON key file from
 https://console.developers.google.com/project/. To run the client with a service 
 account credential:
 
-bins/opt/tips_client
+GRPC_DEFAULT_SSL_ROOTS_FILE_PATH="Google TLS cert" bins/opt/pubsub_client
     --project_id="your project id"
     --service_account_key_file="absolute path to the JSON key file"
