Polishing Makefile to better install targets.
-) renamed cpp_plugin and ruby_plugin to grpc_cpp_plugin and grpc_ruby_plugin.
-) installing plugins.
-) install will now run protobuf's installation too.
-) adding documentation about installation prefix.

--- a/INSTALL
+++ b/INSTALL
@@ -23,6 +23,11 @@ Building the python wrapper requires the following:
 
   # apt-get install python-all-dev python-virtualenv
 
+If you want to install in a different directory than the default /usr/lib, you can
+override it on the command line:
+
+  # make install prefix=/opt
+
 
 *******************************
 * More detailled instructions *
