--- a/INSTALL
+++ b/INSTALL
@@ -10,10 +10,10 @@ wiki pages:
 *************************
 
  $ git clone https://github.com/grpc/grpc.git
+ $ cd grpc
  $ git submodule update --init
-
-  $ make 
-  $ sudo make install
+ $ make 
+ $ sudo make install
 
 You don't need anything else than GNU Make, gcc and autotools. Under a Debian
 or Ubuntu system, this should boil down to the following packages:
